--- a/django/projects/mysite/templates/base.html
+++ b/django/projects/mysite/templates/base.html
@@ -11,8 +11,11 @@
     <title>Hello pybo!</title>
 </head>
 <body>
+<!-- Navbar -->
+{% include "navbar.html" %}
 <!-- 기본 템플릿 안에 삽입될 내용 -->
 {% block content %}
 {% endblock %}
+<script src="{% static 'bootstrap.min.js' %}"></script>
 </body>
 </html>
