템플릿 필터

--- a/django/projects/mysite/templates/pybo/base.html
+++ b/django/projects/mysite/templates/pybo/base.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- Navbar -->
-{% include "navbar.html" %}
+{% include "pybo/navbar.html" %}
 <!-- 기본 템플릿 안에 삽입될 내용 -->
 {% block content %}
 {% endblock %}
