--- a/django/projects/mysite/templates/pybo/question_detail.html
+++ b/django/projects/mysite/templates/pybo/question_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'pybo/base.html' %}
 {% block content %}
 <div class="container my-3">
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
