--- a/django/projects/mysite/templates/pybo/question_list.html
+++ b/django/projects/mysite/templates/pybo/question_list.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'pybo/base.html' %}
+{% load pybo_filter %}
 {% block content %}
 <div class="container my-3">
     <table class="table">
@@ -13,7 +14,10 @@
         {% if result %}
         {% for question in result %}
         <tr>
-            <td>{{ forloop.counter }}</td>
+            <td>
+                <!-- 번호 = 전체건수 - 시작인덱스 - 현재인덱스 + 1 -->
+                {{ result.paginator.count|sub:result.start_index|sub:forloop.counter0|add:1 }}
+            </td>
             <td>
                 <a href="{% url 'pybo:detail' question.id %}">
                     {{ question.subject }}
