--- a/django/projects/mysite/templates/pybo/question_detail.html
+++ b/django/projects/mysite/templates/pybo/question_detail.html
@@ -48,7 +48,10 @@
         {% endif %}
         <!-- 오류표시 End -->
         <div class="form-group">
-            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+            <textarea name="content" id="content"
+                      {% if not user.is_authenticated %}disabled{% endif %}
+                      class="form-control" rows="10">
+            </textarea>
         </div>
         <input type="submit" value="답변 등록" class="btn btn-primary">
     </form>
