--- a/django/projects/mysite/templates/pybo/question_detail.html
+++ b/django/projects/mysite/templates/pybo/question_detail.html
@@ -8,8 +8,9 @@
                 {{ question.content }}
             </div>
             <div class="d-flex justify-content-end">
-                <div class="badge badge-light p-2">
-                    {{ question.created_at }}
+                <div class="badge badge-light p-2 text-lg-start">
+                    <div class="mb-2 text-secondary">{{ question.user.username }}</div>
+                    <div class="text-secondary">{{ question.created_at }}</div>
                 </div>
             </div>
         </div>
@@ -24,7 +25,9 @@
                 {{ answer.content }}
             </div>
             <div class="d-flex justify-content-end">
-                <div class="badge badge-light p-2">
+                <div class="badge badge-light p-2 text-lg-start">
+                    <div class="mb-2 text-secondary">{{ answer.user.username }}</div>
+                    <div class="text-secondary">{{ answer.created_at }}</div>
                     {{ answer.created_at }}
                 </div>
             </div>
