--- a/django/projects/mysite/templates/base.html
+++ b/django/projects/mysite/templates/base.html
@@ -16,6 +16,10 @@
 <!-- 기본 템플릿 안에 삽입될 내용 -->
 {% block content %}
 {% endblock %}
+<script src="{% static 'jquery-3.6.1.min.js' %}"></script>
 <script src="{% static 'bootstrap.min.js' %}"></script>
+
+{% block script %}
+{% endblock %}
 </body>
 </html>
