--- a/django/projects/mysite/templates/pybo/question_detail.html
+++ b/django/projects/mysite/templates/pybo/question_detail.html
@@ -13,6 +13,14 @@
                     <div class="text-secondary">{{ question.created_at }}</div>
                 </div>
             </div>
+
+            {% if request.user == question.user %}
+                <div class="my-3">
+                    <a href="{% url 'pybo:question_update' question.id %}" class="btn btn-sm btn-outline-secondary">수정</a>
+                    <a href="#" class="delete btn btn-sm btn-outline-secondary"
+                    data-uri="{% url 'pybo:question_delete' question.id %}">삭제</a>
+                </div>
+            {% endif %}
         </div>
     </div>
     <h5 class="border-bottom my-3 py-2">
@@ -31,6 +39,12 @@
                     {{ answer.created_at }}
                 </div>
             </div>
+            {% if request.user == answer.user %}
+            <div class="my-3">
+                <a href="{% url 'pybo:answer_update' answer.id %}" class="btn btn-sm btn-outline-secondary">수정</a>
+                <a href="#" class="delete btn btn-sm btn-outline-secondary" data-uri="{% url 'pybo:answer_delete' answer.id%}">삭제</a>
+            </div>
+            {% endif %}
         </div>
     </div>
     {% endfor %}
@@ -51,12 +65,20 @@
         {% endif %}
         <!-- 오류표시 End -->
         <div class="form-group">
-            <textarea name="content" id="content"
-                      {% if not user.is_authenticated %}disabled{% endif %}
-                      class="form-control" rows="10">
-            </textarea>
+            <textarea name="content" id="content" {% if not user.is_authenticated %}disabled{% endif %} class="form-control" rows="10"></textarea>
         </div>
         <input type="submit" value="답변 등록" class="btn btn-primary">
     </form>
 </div>
+{% endblock %}
+{% block script %}
+<script type="text/javascript">
+$(document).ready(function (){
+    $(".delete").on('click', function (){
+        if(confirm("정말로 삭제하시겠습니까?")) {
+            location.href = $(this).data('uri');
+        }
+    });
+})
+</script>
 {% endblock %}
