--- a/django/projects/mysite/templates/common/login.html
+++ b/django/projects/mysite/templates/common/login.html
@@ -5,7 +5,7 @@
             <div class="col-4">
                 <h4>로그인</h4>
             </div>
-            <div class="col-8 text-right">
+            <div class="col-8 text-lg-end">
                 <span>또는<a href="{% url 'common:signup' %}">계정을 만드세요.</a></span>
             </div>
         </div>
