--- a/django/projects/mysite/templates/pybo/question_detail.html
+++ b/django/projects/mysite/templates/pybo/question_detail.html
@@ -8,6 +8,14 @@
                 {{ question.content }}
             </div>
             <div class="d-flex justify-content-end">
+                <!-- 수정일 -->
+                {% if question.updated_at %}
+                <div class="badge bg-light text-dark p-2 text-lg-start mx-3">
+                    <div class="mb-2">updated at</div>
+                    <div>{{ question.updated_at }}</div>
+                </div>
+                {% endif %}
+
                 <div class="badge badge-light p-2 text-lg-start">
                     <div class="mb-2 text-secondary">{{ question.user.username }}</div>
                     <div class="text-secondary">{{ question.created_at }}</div>
@@ -33,6 +41,14 @@
                 {{ answer.content }}
             </div>
             <div class="d-flex justify-content-end">
+                <!-- 수정일 -->
+                {% if answer.updated_at %}
+                <div class="badge bg-light text-dark p-2 text-lg-start mx-3">
+                    <div class="mb-2">updated at</div>
+                    <div>{{ answer.updated_at }}</div>
+                </div>
+                {% endif %}
+
                 <div class="badge badge-light p-2 text-lg-start">
                     <div class="mb-2 text-secondary">{{ answer.user.username }}</div>
                     <div class="text-secondary">{{ answer.created_at }}</div>
