--- a/django/projects/mysite/templates/pybo/question_list.html
+++ b/django/projects/mysite/templates/pybo/question_list.html
@@ -2,6 +2,23 @@
 {% load pybo_filter %}
 {% block content %}
 <div class="container my-3">
+    <!-- 검색 -->
+    <div class="row my-3">
+        <div class="col-6">
+            <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a>
+        </div>
+
+        <div class="col-6">
+            <div class="input-group">
+                <input type="text" id="search_kw" class="form-control" value="{{ kw|default_if_none:'' }}">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 질문 리스트 -->
     <table class="table">
         <thead>
         <tr class="text-lg-center">
@@ -43,23 +60,24 @@
         <!-- 이전페이지 -->
         {% if result.has_previous %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ result.previous_page_number }}">이전</a>
+            <a class="page-link" data-page="{{ question_list.previous_page_number }}" href="javascript:void(0)">이전</a>
         </li>
         {% else %}
         <li class="page-item disabled">
-            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="javascript:void(0)">이전</a>
         </li>
         {% endif %}
+
         <!-- 페이지리스트 -->
         {% for page_number in result.paginator.page_range %}
         {% if page_number >= result.number|add:-2 and page_number <= result.number|add:2 %}
         {% if page_number == result.number %}
         <li class="page-item active" aria-current="page">
-            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+            <a class="page-link" data-page="{{ page_number }}" href="javascript:void(0)">{{ page_number }}</a>
         </li>
         {% else %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+            <a class="page-link" data-page="{{ page_number }}" href="javascript:void(0)">{{ page_number }}</a>
         </li>
         {% endif %}
         {% endif %}
@@ -71,13 +89,36 @@
         </li>
         {% else %}
         <li class="page-item disabled">
-            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+            <a class="page-link" data-page="{{ question_list.next_page_number }}" href="javascript:void(0)">다음</a>
         </li>
         {% endif %}
     </ul>
     <!-- 페이징처리 끝 -->
-    <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">
-        질문 등록하기
-    </a>
 </div>
+
+<form id="searchForm" method="get" action="{% url 'pybo:index' %}">
+    <input type="hidden" id="kw" name="kw" value="{{ kw|default_if_none:'' }}">
+    <input type="hidden" id="page" name="page" value="{{ page }}">
+</form>
+{% endblock %}
+{% block script %}
+<script type='text/javascript'>
+const page_elements = document.getElementsByClassName("page-link");
+console.log(page_elements)
+Array.from(page_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        document.getElementById('page').value = this.dataset.page;
+        document.getElementById('searchForm').submit();
+    });
+});
+
+const btn_search = document.getElementById("btn_search");
+btn_search.addEventListener('click', function() {
+    console.log("hello")
+    document.getElementById('kw').value = document.getElementById('search_kw').value;
+    console.log(document.getElementById('kw').value)
+    document.getElementById('page').value = 1;  // 검색버튼을 클릭할 경우 1페이지부터 조회한다.
+    document.getElementById('searchForm').submit();
+});
+</script>
 {% endblock %}
